# the_c_programming_language

./: CMakeLists.txt  README.md
include/: chapter1.h  chapter2.h  chapter3.h  chapter4.h  chapter5.h  chapter6.h  chapter7.h  chapter8.h
src/: main.c
src/chapter1/: 1-1.c  1-10.c  1-11.c  1-12.c  1-13.c  1-14.c  1-15.c  1-16.c  1-17.c  1-18.c  1-19.c  1-2.c  1-20.c  1-21.c  1-22.c  1-23.c  1-24.c  1-3.c  1-4.c  1-5.c  1-6.c  1-7.c  1-8.c  1-9.c  CMakeLists.txt  chapter1.c  chapter1.h  copy_to_output.c  count_characters.c  count_digits.c  count_lines.c  detab.c  f_to_c.c  for_temp.c  get_line.c  histogram.c  longest_line2.c  one_word_per_line.c  power.c  print_longer_lines.c  (+4 more)
src/chapter2/: 2-1.c  2-10.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-7.c  2-8.c  2-9.c  CMakeLists.txt  alt_squeeze.c  alt_strpbrk.c  chapter2.c  chapter2.h  setbits.c  sizeof.c
src/chapter3/: 3-1.c  3-2.c  3-3.c  3-4.c  3-5.c  3-6.c  CMakeLists.txt  binary_search.c  chapter3.c  chapter3.h  escape.c  get_line.c  str_reverse.c
src/chapter4/: 4-1.c  4-10.c  4-11.c  4-12.c  4-13.c  4-14.c  4-2.c  4-3.c  4-4.c  4-5.c  4-6.c  4-7.c  4-8.c  4-9.c  CMakeLists.txt  chapter4.c  chapter4.h
src/chapter5/: 5-1.c  5-10.c  5-11.c  5-12.c  5-13.c  5-14.c  5-15.c  5-16.c  5-18.c  5-19.c  5-2.c  5-3.c  5-4.c  5-5.c  5-6.c  5-7.c  5-8.c  5-9.c  CMakeLists.txt  args.c  chapter5.c  chapter5.h  day_of_year.c  get_unget.c  strcat.c  strend.c
src/chapter6/: 6-1.c  6-2.c  6-3.c  6-4.c  6-5.c  6-6.c  CMakeLists.txt  cart_three.c  chapter6.c  chapter6.h  rectangles.c
src/chapter7/: 7-1.c  7-2.c  7-3.c  7-4.c  7-5.c  (+6 more)
(+6 files in other folders)
