add_library(chapter1 STATIC 
    chapter1.c
    get_line.c
    1-1.c
    1-2.c
    1-3.c 
    1-4.c 
    1-5.c
    1-6.c
    1-7.c
    1-8.c
    1-9.c
    1-10.c
    1-11.c
    1-12.c
    1-13.c
    1-14.c
    1-15.c
    1-16.c
    1-17.c
    1-18.c
    1-19.c
    1-20.c
    1-21.c
    1-22.c
    1-23.c
    1-24.c
)